# kt

./: .travis.yml  Build.hs  Dockerfile  LICENSE  README.md  docker-compose.yml  kt  kt.cabal
example/envs/: preprod.yaml  production.yaml  qa.yaml
example/templates/: 00-namespaces.yaml  myapp.yaml
example/templates/mycomponent/: mycomponentapp.yaml
meta/: release.yaml
src/: Configuration.hs  File.hs  Main.hs  Rules.hs
templates/: myapp.1.yaml  myapp.yaml  namespaces.pre.yaml
test/: ConfigurationSpec.hs  FileSpec.hs
