name:                kt
version:             0.1.0
homepage:            https://github.com/myob-technology/kt#readme
license:             MIT
license-file:        LICENSE
author:              MYOB Technology
maintainer:          paul.vandevreede@myob.com
copyright:           2018 MYOB Technology
category:            Kubernetes
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable kt
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , shake >= 0.16 && < 0.17
